Fixing spacing a bit and how links are organized.

--- a/_sass/pages/home-blog-presentations.sass
+++ b/_sass/pages/home-blog-presentations.sass
@@ -47,12 +47,10 @@
     > .item > .resources
         list-style: none
         margin: 0 auto
-        display: block
-        padding: 5px
+        display: inline
 
     > .item > .resources > .resource
-        display: inline
-        margin: 10px
+        margin: 0px 10px 0px 0px
 
     > .item > .resources > .resource > .url
         text-decoration: underline
@@ -65,6 +63,7 @@
         text-decoration: none
 
     > .item > .title
+        display: inline
         margin: 0
         width: 75%
         font-weight: 500
